setup.k8s-v1.30/admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: mlbatch-require-queue-name
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      resources:   ["jobs"]
      operations:  ["CREATE", "UPDATE"]
    - apiGroups:   ["kubeflow.org"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pytorchjobs"]
    - apiGroups:   ["cluster.ray.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["rayjobs","rayclusters"]
  validations:
    - expression: "has(object.metadata.labels) && 'kueue.x-k8s.io/queue-name' in object.metadata.labels && object.metadata.labels['kueue.x-k8s.io/queue-name'] != ''"
      message: "All non-AppWrapper workloads must have a 'kueue.x-k8s.io/queue-name' label with non-empty value."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: mlbatch-require-queue-name
spec:
  policyName: mlbatch-require-queue-name
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        mlbatch-team-namespace: "true"
